--- a/styles/New-mission.css
+++ b/styles/New-mission.css
@@ -68,7 +68,7 @@
   display: flex;
   justify-content: space-between;
   background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0) 100%),
-    url("../images/Vectorrr.png");
+    url("/images/Vectorrr.png");
   height: 550px;
   border-radius: 10px;
 }
