--- a/styles/New-mission.css
+++ b/styles/New-mission.css
@@ -63,12 +63,12 @@
 /* welcome to midnight section */
 .welcome-section {
   margin: 20px 20px;
+  background: url("../images/Vectorrr.png");
 }
 .welcome-container {
   display: flex;
   justify-content: space-between;
-  background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0) 100%),
-    url("/images/Vectorrr.png");
+  background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0) 100%);
   height: 550px;
   border-radius: 10px;
 }
