--- a/styles/New-mission.css
+++ b/styles/New-mission.css
@@ -63,6 +63,7 @@
 .welcome-section {
   margin: 20px 20px;
   background: url("../images/Vectorrr.png");
+  border-radius: 10px;
 }
 .welcome-container {
   display: flex;
