--- a/styles/New-mission.css
+++ b/styles/New-mission.css
@@ -29,6 +29,7 @@
   font-size: 72px;
   font-weight: 900;
 }
+/* main related styles */
 /* discount section */
 .discount-container {
   text-align: center;
@@ -71,6 +72,7 @@
   background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0) 100%);
   height: 550px;
   border-radius: 10px;
+  margin-bottom: 100px;
 }
 .welcome-section .welcome {
   color: #fff;
@@ -103,4 +105,35 @@
 }
 .logo-column {
   padding: 50px 70px 0 60px;
+}
+/* address section */
+.address-container {
+  text-align: center;
+}
+.text-color {
+  color: #f00;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 600;
+}
+.total-address {
+  color: #070211;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 30px;
+  margin-bottom: 30px;
+}
+.address-button {
+  color: #fff;
+  background-color: #f00;
+  text-align: center;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 5px;
+  position: relative;
+  left: 25px;
 }
