--- a/styles/New-mission.css
+++ b/styles/New-mission.css
@@ -207,3 +207,34 @@
   width: 140px;
   height: 140px;
 }
+/* holidays sale section */
+.holiday-sales-container {
+  text-align: center;
+}
+.upper-text {
+  color: #070211;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+}
+.holidays-style {
+  color: #f00;
+  font-family: Merriweather;
+  font-size: 72px;
+  font-weight: 900;
+}
+.sales-tag {
+  color: #070211;
+  font-family: Merriweather;
+  font-size: 72px;
+  font-weight: 900;
+  margin-bottom: 20px;
+}
+.sales-description {
+  color: rgba(7, 2, 17, 0.6);
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  margin: 0 150px 50px;
+}
