--- a/styles/New-mission.css
+++ b/styles/New-mission.css
@@ -268,3 +268,37 @@
   height: 500px;
   width: 500px;
 }
+/* gift-gallery section */
+.portfolio {
+  position: relative;
+  bottom: 50px;
+  margin-left: 30px;
+}
+.gift-tag {
+  color: #f00;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+}
+.gift-title {
+  color: #070211;
+  font-family: Merriweather;
+  font-size: 48px;
+  font-weight: 900;
+}
+.gift-description {
+  color: rgba(7, 2, 17, 0.6);
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+  width: 750px;
+  margin-bottom: 20px;
+}
+.portfolio-gallery {
+  float: left;
+  gap: 7px 7px;
+}
+.gallery-item:hover {
+  border: 5px solid lightgreen;
+  border-radius: 20px;
+}
