--- a/styles/New-mission.css
+++ b/styles/New-mission.css
@@ -180,9 +180,9 @@
   bottom: 50px;
 }
 .fireworks-png {
-  width: 340px;
-  height: 340px;
-  border: 45px solid white;
+  width: 360px;
+  height: 360px;
+  border: 20px solid white;
   border-radius: 50%;
 }
 .column-3 {
@@ -301,4 +301,26 @@
 .gallery-item:hover {
   border: 5px solid lightgreen;
   border-radius: 20px;
+}
+/* newsletter section */
+.newsletter-container {
+  text-align: center;
+}
+.email-logo {
+  margin-bottom: 30px;
+}
+.subscribe {
+  color: #070211;
+  font-family: Merriweather;
+  font-size: 48px;
+  font-weight: 900;
+  margin-bottom: 20px;
+}
+.subscribe-description {
+  color: rgba(7, 2, 17, 0.6);
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  padding: 0 300px 0;
 }
