--- a/styles/New-mission.css
+++ b/styles/New-mission.css
@@ -300,14 +300,11 @@
 }
 .gallery-item:hover {
   border: 5px solid lightgreen;
-  border-radius: 20px;
+  border-radius: 23px;
 }
 /* newsletter section */
 .newsletter-container {
   text-align: center;
-}
-.email-logo {
-  margin-bottom: 30px;
 }
 .subscribe {
   color: #070211;
@@ -320,7 +317,33 @@
   color: rgba(7, 2, 17, 0.6);
   font-family: Inter;
   font-size: 20px;
-  font-style: normal;
   font-weight: 400;
+  text-align: center;
   padding: 0 300px 0;
+  margin-bottom: 45px;
+}
+.subscribe {
+  display: inline-flex;
+  text-align: center;
+}
+.email-input {
+  border: none;
+  border-radius: 50px 0px 0px 50px;
+  background: #fff;
+  border-right: none;
+  width: 450px;
+  height: 20px;
+  padding: 20px 30px;
+  text-align: center;
+  font-size: 20px;
+}
+.subscribe-button {
+  border: none;
+  border-radius: 0px 50px 50px 0px;
+  width: 150px;
+  background: #f00;
+  color: #fff;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 600;
 }
