--- a/styles/New-mission.css
+++ b/styles/New-mission.css
@@ -305,6 +305,8 @@
 /* newsletter section */
 .newsletter-container {
   text-align: center;
+  border-radius: 16px;
+  background: rgba(255, 0, 0, 0.05);
 }
 .subscribe {
   color: #070211;
