--- a/styles/New-mission.css
+++ b/styles/New-mission.css
@@ -10,6 +10,7 @@
   margin: 20px 20px;
   background: url("../images/Banner\ Image.png"),
     linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%);
+  background-size: cover;
   border-radius: 16px;
   background-repeat: no-repeat;
   height: 600px;
@@ -64,6 +65,7 @@
 .welcome-section {
   margin: 20px 20px;
   background: url("../images/Vectorrr.png");
+  background-size: cover;
   border-radius: 10px;
 }
 .welcome-container {
