--- a/styles/New-mission.css
+++ b/styles/New-mission.css
@@ -293,10 +293,8 @@
   font-family: Inter;
   font-size: 20px;
   font-weight: 400;
-  width: 750px;
   margin-bottom: 20px;
-  position: relative;
-  right: 275px;
+  padding-right: 600px;
 }
 .portfolio-gallery {
   float: left;
@@ -362,12 +360,6 @@
   border-radius: 10px;
   padding-top: 100px;
 }
-.phone {
-  display: inline;
-}
-.website {
-  display: inline;
-}
 .footer-address {
   color: #fff;
   font-family: Inter;
@@ -393,9 +385,7 @@
   color: #fff;
   font-family: Inter;
   font-size: 24px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 40px; /* 166.667% */
 }
 .phone,
 .website {
